# mdfactory

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTORS.md  LICENSE  README.md  SKILLS.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
config_templates/: config.ini
docs/: .gitignore  AGENTS.md  README.md  next.config.mjs  package.json
docs/content/docs/: enquiries.mdx  index.mdx  installation.mdx  license.mdx  meta.json  quick-start.mdx
docs/content/docs/developer-guide/: adding-analyses-artifacts.mdx  adding-parametrization.mdx  ai-development.mdx  architecture.mdx  contributing.mdx  custom-builders.mdx  extending-engines.mdx  meta.json  testing.mdx
docs/content/docs/user-guide/: agentic-ai.mdx  cli-reference.mdx  configuration.mdx  csv-format.mdx  executing-analyses.mdx  foundry-dev-tools.mdx  meta.json  parametrization.mdx  running-on-hpc.mdx  sync.mdx  system-types.mdx  troubleshooting.mdx  tutorial-mixedbox-campaign.mdx  workflows.mdx  yaml-format.mdx
docs/public/tutorials/: mixedbox_chain_length_series_20.csv
docs/scripts/: generate-docs.mjs
docs/src/: mdx-components.tsx
docs/src/app/: layout.tsx
docs/src/app/(home)/: page.tsx
docs/src/app/docs/: layout.tsx
docs/src/app/docs/[[...slug]]/: page.tsx
docs/src/app/llms.txt/: route.ts
docs/src/app/og/docs/[...slug]/: route.tsx
docs/src/components/: feature-card.tsx  search.tsx
docs/src/components/mdx/: mermaid.tsx
docs/src/components/python/: index.tsx  type-link.tsx
docs/src/components/ui/: accordion.tsx
docs/src/lib/: layout.shared.tsx
examples/bilayer/: popc_cgenff.yaml  popc_smirnoff.yaml
examples/lnp/: lnp_alc0315.yaml  lnp_alc0315_smirnoff.yaml
examples/mixedbox/: water_ethanol_cgenff.yaml  water_ethanol_smirnoff.yaml
mdfactory/: __init__.py  build.py  check.py  cli.py  parametrize.py  prepare.py  settings.py  workflows.py
mdfactory/analysis/: __init__.py  artifacts.py  constants.py  registry.py  registry_queries.py  simulation.py  store.py  submit.py  utils.py
mdfactory/analysis/bilayer/: __init__.py  area_per_lipid.py  bilayer_thickness_map.py  box_size_timeseries.py  cholesterol_tilt.py  conformational_density.py  density_distribution.py  headgroup_hydration.py  interdigitation.py  leaflet_distribution.py  lipid_clustering.py  lipid_rg.py  tail_end_to_end.py  tail_order_parameter.py  utils.py
mdfactory/analysis/bilayer/artifacts/: __init__.py  bilayer_render_script.tcl  render_movie_smooth.tcl
mdfactory/models/: composition.py  input.py  parametrization.py  species.py  validators.py
mdfactory/run_schedules/: __init__.py  run_schedules.yaml
mdfactory/run_schedules/gromacs/bilayer/: md.mdp  npt.mdp  nvt.mdp
mdfactory/run_schedules/gromacs/mixedbox/: md.mdp  npt.mdp  nvt.mdp
mdfactory/setup/: lnp.py  solvation.py
mdfactory/simulation/: openmm_utils.py
mdfactory/tests/: conftest.py  test_analysis_registry.py  test_analysis_utils.py  test_build.py  test_cli_preprocess.py  test_csv_backend.py  test_db_operations.py  test_foundry_live.py  test_lipid_assignment.py  test_models.py  test_parametrization.py  test_prepare.py  test_pull.py  test_pull_analysis.py  test_push.py  test_push_analysis.py  test_push_artifacts.py  test_settings.py  test_simulation.py  test_simulation_store.py  test_solvation.py  test_sql.py  test_submit.py  test_sync_clear.py  test_sync_config_foundry.py  test_sync_config_local_paths.py  test_sync_push_preflight.py  test_system_chemistry.py  test_topology_utilities.py  test_utilities.py  utils.py
mdfactory/tests/testfiles/: .gitignore  cgenff_output.itp  generate_unique_lipids_lnpdb.py  mol2_references.json  unique_lipids.json
mdfactory/utils/: chemistry_utilities.py  data_manager.py  db_operations.py  pull.py  pull_analysis.py  pull_artifacts.py  push.py  push_analysis.py  push_artifacts.py  setup_utilities.py  sync_config.py  topology_utilities.py  utilities.py
workflows/: build.nf  nextflow.config  run_full_pipeline.sh  simulate.config  simulate.nf
